--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tool_base
 description: Base for developing command line apps. Take from Flutter Tools.
 version: 1.9.5+3
-homepage: https://github.com/mmcc007/tool_base
-author: Maurice McCabe <mmcc007@gmail.com>
+homepage: https://github.com/kstainke/tool_base
 
 environment:
   # The pub client defaults to an <2.0.0 sdk constraint which we need to explicitly overwrite.
