--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   # To update these, use "flutter update-packages --force-upgrade".
   archive: ^3.1.6
   file: ^6.1.2
+  intl: ^0.17.0
   platform: ^3.0.2
   process: ^4.2.4
   pub_cache: ^0.3.1
